--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
         <div>
             <a href="/files/{{username}}" class="action-btn">我的文件</a>
             <a href="/uploads" class="action-btn">上传记录</a>
+            <a href="/test_results" class="action-btn">测试结果</a>
             {{admin_panel}}
         </div>
         <a href="/logout" class="logout-link">退出登录</a>
